# rbot

./: .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.yml
.github/workflows/: build-docker.yml  build.yml
src/: main.rs
src/config/: proxy.rs
src/features/: news.rs
src/qq/: file.rs
src/utils/: download.rs  request.rs
