[package]
name = "rbot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["default"]}
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.13.1", features = ["default", "json", "socks", "query"] }
serde_json = { version = "1.0.145", features = ["default"]}
serde = { version = "1.0.226", features = ["derive"] }
toml = { version = "0.9.6", features = ["default"]}
log = { version = "0.4.28", features = ["serde"]}
env_logger = { version = "0.11.8", features = ["default"]}
tokio-cron-scheduler = { version = "0.15.0", features = ["default"]}
ed25519-dalek = { version = "3.0.0-pre.1", features = ["default", "rand_core", "signature"]}
hex = { version = "0.4.3"}
tower-http = { version = "0.6.6", features = ["fs", "default"]}
chrono = { version = "0.4.42", features = ["default"]}
image = { version = "0.25.8", features = ["default"]}